--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development tsx api/index.ts",
     "build": "vite build",
-    "start": "npm run build && NODE_ENV=production tsx api/index.ts",
+    "start": "NODE_ENV=production tsx api/index.ts",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
